--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "three": "^0.137.5"
+  },
+  "devDependencies": {
+    "eslint": "^8.11.0",
+    "grunt": "^1.4.1"
   }
 }
